kubernetes/vpn/wg-easy/wg-easy-middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-wg-easy
  namespace: vpn
spec:
  forwardAuth:
    address: http://authentik.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
      - X-authentik-username
      - X-authentik-email
      - X-authentik-groups
      - X-authentik-uid
      - X-authentik-name
      - Authorization
    authRequestHeaders:
      - X-Forwarded-Method
      - X-Forwarded-Proto
      - X-Forwarded-Host
      - X-Forwarded-Uri
      - Cookie
