kubernetes/vpn/wg-easy/wg-easy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  namespace: vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wg-easy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wg-easy
    spec:
      priorityClassName: vpn-priority
      hostNetwork: true
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - jay-c
                
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy:15.4
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - SYS_MODULE
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          ports:
            - containerPort: 51820
              protocol: UDP
            - containerPort: 51821
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/wireguard
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wg-easy-config

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wg-easy
  name: wg-easy-lb
  namespace: vpn
spec:
  ports:
  - name: wireguard
    targetPort: 51820
    port: 51820
    protocol: UDP
  selector:
    app: wg-easy
  loadBalancerIP: 192.168.6.58
  type: LoadBalancer
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: wg-easy
  namespace: vpn
spec:
  clusterIP: None # This makes the service headless
  ports:
  - name: web
    port: 51821
    protocol: TCP
    targetPort: 51821

---
apiVersion: v1
kind: Endpoints
metadata:
  name: wg-easy
  namespace: vpn
subsets:
  - addresses:
      - ip: 192.168.5.3
    ports:
      - name: web
        port: 51821
        protocol: TCP

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: wg-easy-ui-endpoint
  namespace: vpn
  labels:
    kubernetes.io/service-name: wg-easy
addressType: IPv4
ports:
  - name: web
    appProtocol: http
    protocol: TCP
    port: 51821
endpoints:
  - addresses:
      - "192.168.5.3"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-easy-https
  namespace: vpn
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "vpn-sablier-wg-easy@kubernetescrd"
    traefik.ingress.kubernetes.io/router.middlewares: "vpn-authentik-wg-easy@kubernetescrd"

spec:
  tls:
  - secretName: wg-bas-tls
  rules:
  - host: wg.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wg-easy
            port:
              number: 51821
